unpackaged/main/default/objects/Collection_Op_Queue_Event__e/Collection_Op_Queue_Event__e.object-meta.xml
<CustomObject>
    <label>Collection Op Queue Event</label>
    <pluralLabel>Collection Op Queue Events</pluralLabel>
</CustomObject>