unpackaged/main/default/objects/Collection_Op_Queue_Event__e/fields/Collection_Op_Id__c.field-meta.xml
<CustomField>
    <fullName>Collection_Op_Id__c</fullName>
    <label>Collection Op Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>