unpackaged/main/default/objects/Collection_Op_Queue_Event__e/fields/Collection_Op_Old_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Op_Old_Name__c</fullName>
    <label>Collection Op Old Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>