unpackaged/main/default/objects/Collection_Op_Queue_Event__e/fields/Trigger_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Operation_Type__c</fullName>
    <label>Trigger Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>